--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
   "autoload": {
     "psr-4": {
       "core\\": "core/",
-      "app\\": "app/"
+      "app\\": "app/",
+      "tests\\": "tests/"
     }
   },
   "minimum-stability": "dev",
